{
  "version": 4,
  "terraform_version": "1.9.2",
  "serial": 805,
  "lineage": "6e724e65-cf64-667f-a78a-6e5e6484682d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:707809188586:loadbalancer/app/wordpress-lb/f453d35fe19dd133",
            "arn_suffix": "app/wordpress-lb/f453d35fe19dd133",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "wordpress-lb-1143421156.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:707809188586:loadbalancer/app/wordpress-lb/f453d35fe19dd133",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wordpress-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-003aac41a85169fa9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03a788c050b45016d"
              },
              {
                "subnet_id": "subnet-03ee021d8fcf57406"
              }
            ],
            "subnets": [
              "subnet-03a788c050b45016d",
              "subnet-03ee021d8fcf57406"
            ],
            "tags": {
              "Name": "wordpress-lb"
            },
            "tags_all": {
              "Name": "wordpress-lb"
            },
            "vpc_id": "vpc-06c88805c93ca32f7",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_security_group.wordpress",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:707809188586:listener/app/wordpress-lb/f453d35fe19dd133/9665accb292c77ea",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:707809188586:targetgroup/wordpress-lb-target-group/9137e20e4d97157f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:707809188586:listener/app/wordpress-lb/f453d35fe19dd133/9665accb292c77ea",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:707809188586:loadbalancer/app/wordpress-lb/f453d35fe19dd133",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.wordpress",
            "aws_lb_target_group.wordpress",
            "aws_security_group.wordpress",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:707809188586:targetgroup/wordpress-lb-target-group/9137e20e4d97157f",
            "arn_suffix": "targetgroup/wordpress-lb-target-group/9137e20e4d97157f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:707809188586:targetgroup/wordpress-lb-target-group/9137e20e4d97157f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-3:707809188586:loadbalancer/app/wordpress-lb/f453d35fe19dd133"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wordpress-lb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "wordpress-lb-target-group"
            },
            "tags_all": {
              "Name": "wordpress-lb-target-group"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06c88805c93ca32f7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:707809188586:security-group/sg-01109d16dde2abe00",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01109d16dde2abe00",
            "ingress": [],
            "name": "eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "707809188586",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06c88805c93ca32f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:707809188586:security-group/sg-00cadb67b791b2839",
            "description": "Security group for EKS nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00cadb67b791b2839",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow all traffic from the EKS cluster security group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-01109d16dde2abe00"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "eks-node-sg",
            "name_prefix": "",
            "owner_id": "707809188586",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06c88805c93ca32f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.eks_cluster",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_mariadb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:707809188586:security-group/sg-0dee4fb02b2b02fb2",
            "description": "Security group for MariaDB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dee4fb02b2b02fb2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL traffic from WordPress",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-003aac41a85169fa9"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sg_mariadb",
            "name_prefix": "",
            "owner_id": "707809188586",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mariadb_sg"
            },
            "tags_all": {
              "Name": "mariadb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c88805c93ca32f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.wordpress",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:707809188586:security-group/sg-003aac41a85169fa9",
            "description": "Security group for WordPress",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-003aac41a85169fa9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from my computer",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic through HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wordpress-sg",
            "name_prefix": "",
            "owner_id": "707809188586",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress_sg"
            },
            "tags_all": {
              "Name": "wordpress_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c88805c93ca32f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:707809188586:security-group/sg-0f7fb2061ae5bc16a",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f7fb2061ae5bc16a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow workstation to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "wordpress-eks cluster",
            "name_prefix": "",
            "owner_id": "707809188586",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wordpress-eks-cluster"
            },
            "tags_all": {
              "Name": "wordpress-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c88805c93ca32f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "wordpress-cluster-ingress-workstation-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-1307193352",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f7fb2061ae5bc16a",
            "security_group_rule_id": "sgr-04842a8f982200ce3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.wordpress-cluster",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:707809188586:security-group/sg-05b29be95ecb790da",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-05b29be95ecb790da",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-020f652d3ef65c349"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Maysa-eks-cluster-cluster-2024080715030329810000000b",
            "name_prefix": "Maysa-eks-cluster-cluster-",
            "owner_id": "707809188586",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Maysa-eks-cluster-cluster"
            },
            "tags_all": {
              "Name": "Maysa-eks-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c88805c93ca32f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:707809188586:security-group/sg-020f652d3ef65c349",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Node all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-020f652d3ef65c349",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05b29be95ecb790da"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05b29be95ecb790da"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05b29be95ecb790da"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05b29be95ecb790da"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05b29be95ecb790da"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05b29be95ecb790da"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node all ports/protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "Maysa-eks-cluster-node-2024080715030312170000000a",
            "name_prefix": "Maysa-eks-cluster-node-",
            "owner_id": "707809188586",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Maysa-eks-cluster-node",
              "kubernetes.io/cluster/Maysa-eks-cluster": "owned"
            },
            "tags_all": {
              "Name": "Maysa-eks-cluster-node",
              "kubernetes.io/cluster/Maysa-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c88805c93ca32f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2261440592",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05b29be95ecb790da",
            "security_group_rule_id": "sgr-0b6106f2fd448eef4",
            "self": false,
            "source_security_group_id": "sg-020f652d3ef65c349",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Node all egress",
            "from_port": 0,
            "id": "sgrule-119176120",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-020f652d3ef65c349",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2329285401",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-020f652d3ef65c349",
            "security_group_rule_id": "sgr-0744778bc2919b482",
            "self": false,
            "source_security_group_id": "sg-05b29be95ecb790da",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-582083812",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-020f652d3ef65c349",
            "security_group_rule_id": "sgr-0ff126d416cbe1cef",
            "self": false,
            "source_security_group_id": "sg-05b29be95ecb790da",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3958604658",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-020f652d3ef65c349",
            "security_group_rule_id": "sgr-0eac728563838f76f",
            "self": false,
            "source_security_group_id": "sg-05b29be95ecb790da",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-4172267347",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-020f652d3ef65c349",
            "security_group_rule_id": "sgr-0ffc6eff96324c397",
            "self": false,
            "source_security_group_id": "sg-05b29be95ecb790da",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2618199192",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-020f652d3ef65c349",
            "security_group_rule_id": "sgr-0f5045d1ada3dc69d",
            "self": false,
            "source_security_group_id": "sg-05b29be95ecb790da",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-454845250",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-020f652d3ef65c349",
            "security_group_rule_id": "sgr-0c8d454ec9d947062",
            "self": false,
            "source_security_group_id": "sg-05b29be95ecb790da",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2985768244",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-020f652d3ef65c349",
            "security_group_rule_id": "sgr-051253ef8300998ec",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node all ports/protocols",
            "from_port": 0,
            "id": "sgrule-2824417316",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-020f652d3ef65c349",
            "security_group_rule_id": "sgr-0ab6033d041ce67b5",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1072253154",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-020f652d3ef65c349",
            "security_group_rule_id": "sgr-029157c2bec738e49",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2612456205",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-020f652d3ef65c349",
            "security_group_rule_id": "sgr-0264735053aacad95",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:707809188586:network-acl/acl-02979d2c0efc695ad",
            "default_network_acl_id": "acl-02979d2c0efc695ad",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-02979d2c0efc695ad",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "707809188586",
            "subnet_ids": [
              "subnet-0094783c69152b836",
              "subnet-01fdea92e5a82e7a0",
              "subnet-03a788c050b45016d",
              "subnet-03ee021d8fcf57406",
              "subnet-0a7227ce3f66d968f",
              "subnet-0fee7f5be0ef13b35"
            ],
            "tags": {
              "Name": "PW1-vpc-default",
              "kubernetes.io/cluster/Maysa-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "PW1-vpc-default",
              "kubernetes.io/cluster/Maysa-eks-cluster": "shared"
            },
            "vpc_id": "vpc-06c88805c93ca32f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:707809188586:route-table/rtb-0362362241d59049b",
            "default_route_table_id": "rtb-0362362241d59049b",
            "id": "rtb-0362362241d59049b",
            "owner_id": "707809188586",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "PW1-vpc-default",
              "kubernetes.io/cluster/Maysa-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "PW1-vpc-default",
              "kubernetes.io/cluster/Maysa-eks-cluster": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-06c88805c93ca32f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:707809188586:security-group/sg-0dd53c12bcd5e2553",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0dd53c12bcd5e2553",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "707809188586",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PW1-vpc-default",
              "kubernetes.io/cluster/Maysa-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "PW1-vpc-default",
              "kubernetes.io/cluster/Maysa-eks-cluster": "shared"
            },
            "vpc_id": "vpc-06c88805c93ca32f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06843bf1ea641c0bb",
            "arn": "arn:aws:ec2:eu-west-3:707809188586:elastic-ip/eipalloc-06843bf1ea641c0bb",
            "association_id": "eipassoc-097fbe4b079e1e3a6",
            "domain": "vpc",
            "id": "eipalloc-06843bf1ea641c0bb",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-02009f234f0df591f",
            "private_dns": "ip-10-0-0-96.eu-west-3.compute.internal",
            "private_ip": "10.0.0.96",
            "public_dns": "ec2-15-188-255-90.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.188.255.90",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "PW1-vpc-eu-west-3a",
              "kubernetes.io/cluster/Maysa-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "PW1-vpc-eu-west-3a",
              "kubernetes.io/cluster/Maysa-eks-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:707809188586:internet-gateway/igw-03ab51e543923e592",
            "id": "igw-03ab51e543923e592",
            "owner_id": "707809188586",
            "tags": {
              "Name": "PW1-vpc",
              "kubernetes.io/cluster/Maysa-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "PW1-vpc",
              "kubernetes.io/cluster/Maysa-eks-cluster": "shared"
            },
            "vpc_id": "vpc-06c88805c93ca32f7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06843bf1ea641c0bb",
            "association_id": "eipassoc-097fbe4b079e1e3a6",
            "connectivity_type": "public",
            "id": "nat-084ca19ed6239869a",
            "network_interface_id": "eni-02009f234f0df591f",
            "private_ip": "10.0.0.96",
            "public_ip": "15.188.255.90",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03a788c050b45016d",
            "tags": {
              "Name": "PW1-vpc-eu-west-3a",
              "kubernetes.io/cluster/Maysa-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "PW1-vpc-eu-west-3a",
              "kubernetes.io/cluster/Maysa-eks-cluster": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02dd0262a9d6db2b81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-084ca19ed6239869a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02dd0262a9d6db2b8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03ab51e543923e592",
            "id": "r-rtb-04ad7f6068ab6dd921080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04ad7f6068ab6dd92",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:707809188586:route-table/rtb-02dd0262a9d6db2b8",
            "id": "rtb-02dd0262a9d6db2b8",
            "owner_id": "707809188586",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-084ca19ed6239869a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PW1-vpc-private",
              "kubernetes.io/cluster/Maysa-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "PW1-vpc-private",
              "kubernetes.io/cluster/Maysa-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c88805c93ca32f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:707809188586:route-table/rtb-04ad7f6068ab6dd92",
            "id": "rtb-04ad7f6068ab6dd92",
            "owner_id": "707809188586",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03ab51e543923e592",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PW1-vpc-public",
              "kubernetes.io/cluster/Maysa-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "PW1-vpc-public",
              "kubernetes.io/cluster/Maysa-eks-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c88805c93ca32f7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0206bce18def8bb49",
            "route_table_id": "rtb-02dd0262a9d6db2b8",
            "subnet_id": "subnet-0094783c69152b836"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3f6ec152c8bca6c",
            "route_table_id": "rtb-02dd0262a9d6db2b8",
            "subnet_id": "subnet-0a7227ce3f66d968f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fb69eeaec325782",
            "route_table_id": "rtb-02dd0262a9d6db2b8",
            "subnet_id": "subnet-0fee7f5be0ef13b35"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09db42cdcda8e691d",
            "route_table_id": "rtb-02dd0262a9d6db2b8",
            "subnet_id": "subnet-01fdea92e5a82e7a0"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eb155fa875804be1",
            "route_table_id": "rtb-04ad7f6068ab6dd92",
            "subnet_id": "subnet-03a788c050b45016d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0994fe6f60faba65d",
            "route_table_id": "rtb-04ad7f6068ab6dd92",
            "subnet_id": "subnet-03ee021d8fcf57406"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:707809188586:subnet/subnet-0094783c69152b836",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0094783c69152b836",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "707809188586",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "database-subnet",
              "Role": "database",
              "kubernetes.io/cluster/Maysa-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "database-subnet",
              "Role": "database",
              "kubernetes.io/cluster/Maysa-eks-cluster": "shared"
            },
            "vpc_id": "vpc-06c88805c93ca32f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:707809188586:subnet/subnet-0a7227ce3f66d968f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7227ce3f66d968f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "707809188586",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "database-subnet",
              "Role": "database",
              "kubernetes.io/cluster/Maysa-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "database-subnet",
              "Role": "database",
              "kubernetes.io/cluster/Maysa-eks-cluster": "shared"
            },
            "vpc_id": "vpc-06c88805c93ca32f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:707809188586:subnet/subnet-0fee7f5be0ef13b35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fee7f5be0ef13b35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "707809188586",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PW1-vpc-private-eu-west-3a",
              "kubernetes.io/cluster/Maysa-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "PW1-vpc-private-eu-west-3a",
              "kubernetes.io/cluster/Maysa-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06c88805c93ca32f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:707809188586:subnet/subnet-01fdea92e5a82e7a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01fdea92e5a82e7a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "707809188586",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PW1-vpc-private-eu-west-3b",
              "kubernetes.io/cluster/Maysa-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "PW1-vpc-private-eu-west-3b",
              "kubernetes.io/cluster/Maysa-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-06c88805c93ca32f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:707809188586:subnet/subnet-03a788c050b45016d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a788c050b45016d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "707809188586",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PW1-vpc-public-eu-west-3a",
              "kubernetes.io/cluster/Maysa-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "PW1-vpc-public-eu-west-3a",
              "kubernetes.io/cluster/Maysa-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06c88805c93ca32f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:707809188586:subnet/subnet-03ee021d8fcf57406",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ee021d8fcf57406",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "707809188586",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PW1-vpc-public-eu-west-3b",
              "kubernetes.io/cluster/Maysa-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "PW1-vpc-public-eu-west-3b",
              "kubernetes.io/cluster/Maysa-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-06c88805c93ca32f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:707809188586:vpc/vpc-06c88805c93ca32f7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02979d2c0efc695ad",
            "default_route_table_id": "rtb-0362362241d59049b",
            "default_security_group_id": "sg-0dd53c12bcd5e2553",
            "dhcp_options_id": "dopt-05d53c2995d1a3d67",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06c88805c93ca32f7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0362362241d59049b",
            "owner_id": "707809188586",
            "tags": {
              "Name": "PW1-vpc",
              "kubernetes.io/cluster/Maysa-eks-cluster": "shared"
            },
            "tags_all": {
              "Name": "PW1-vpc",
              "kubernetes.io/cluster/Maysa-eks-cluster": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}